--- a/translations/suite/de.json
+++ b/translations/suite/de.json
@@ -5,6 +5,7 @@
         "Radio": "Sender",
         "Tools": "Hilfsprogramme",
         "Others": "weiter Info",
+        "Others": "weitere Infos",
         "NewVersionAvailable": "Eine neue Version von Ethos Suite ist verfügbar. Möchten Sie das Installationsprogramm herunterladen?",
         "DownloadingLatestInstaller": "Aktuelles Installationsprogramm herunterladen",
         "InstallerHasBeenDownloaded": "Das neueste Installationsprogramm wurde erfolgreich heruntergeladen. Bestätigen Sie, dass Sie die Installation jetzt ausführen möchten?",
@@ -299,6 +300,7 @@
         "Type": "Typ",
         "Airplane": "Motorflugzeug",
         "Glider": "Seglelflugzeug",
+        "Glider": "Segelflugzeug",
         "Helicopter": "Hubschrauber",
         "Multicopter": "Multicopter",
         "Other": "Andere",
