--- a/translations/display/es.csv
+++ b/translations/display/es.csv
@@ -384,7 +384,7 @@ FLASH_INTERNAL_MODULE,"Flashear módulo interno"
 PLAY,"Reproducir"
 CURRENT_VERSION,"Versión actual"
 FLASH_RECEIVER_BY_INTERNAL_MODULE_OTA,"Flashear RX con módulo int. OTA"
-FLASH_RECEIVER_BY_EXTERNAL_MODULE_OTA,"Flashear RX con módulo externo OTA"
+FLASH_RECEIVER_BY_EXTERNAL_MODULE_OTA,"Flashear RX con módulo ext. OTA"
 OTA_UPDATE,"Actualizac. OTA"
 FLASH_EXTERNAL_DEVICE,"Flashear disposit. externo"
 OPEN,"Abrir"
@@ -561,7 +561,7 @@ GASSUIT_RES_VOL,"GASS Vol. Res."
 GASSUIT_RES_PERC,"GASS Res. %"
 GASSUIT_FLOW,"GASS flujo"
 GASSUIT_MAX_FLOW,"GASS flujo max"
-GASSUIT_AVG_FLOW,"GASS flujo medio"
+GASSUIT_AVG_FLOW,"GASS flujo med"
 BEC_VOLTAGE,"Voltaje BEC"
 BEC_CURRENT,"Intensidad BEC"
 R9M_POWER,"Potencia. R9M"
@@ -705,8 +705,8 @@ CDI_OFF_SPEED_LIMIT,"Límite veloc. CDI off"
 FLOW_PULSE,"Impulso de flujo"
 AUTO_RESET,"Reinic. auto"
 RESET_RESIDUAL_VOLUME,"Restablecer volumen residual"
-RESET_MAX_FLOW,"Restablecer flujo máximo"
-RESET_AVERAGE_FLOW,"Restablecer flujo medio"
+RESET_MAX_FLOW,"Restablecer flujo máx."
+RESET_AVERAGE_FLOW,"Restablecer flujo med."
 VOLUME_ALARM,"Alarma volumen"
 MAX_FLOW_ALARM,"Alarma flujo máx."
 OVER_SPEED_ALARM,"Alarma sobreveloc."
@@ -825,7 +825,7 @@ VOICE,"Voz"
 VAR,"Var"
 VOLUME,"Volumen"
 SAVE_TO_FLASH,"Guardar en flash"
-SAVE_TO_FLASH_MESSAGE,""Todos los parámetros correctamente guardados en memoria flash"
+SAVE_TO_FLASH_MESSAGE,"Todos los parámetros correctamente guardados en memoria flash"
 TIMER_GENERATOR,"Gen. de cronómetro"
 CONFIRM_CLEAR_CHANNEL_DDD_NAME,"Canal %d no utilizado en ninguna mezcla. ¿Borrar su nombre ?"
 EDIT_SSS,"Editar %s"
@@ -1092,7 +1092,7 @@ CONFIRM_RESET_RUNTIME,"Runtime se reinicirá.\n¿Está seguro de continuar?"
 BANK,"Bank"
 POWER_SWITCH,"Interr. de encendido"
 CURRENT_AND_VOLTAGE_RATE,"Regimen de intens. & voltaje"
-BEC_VOLTAGE_RATE,"BEC voltage rate"
+BEC_VOLTAGE_RATE,"BEC regimen de voltaje"
 SBEC_VOLTAGE,"Voltaje SBEC"
 BATTERY_MODE,"Modo batería"
 SWITCH_VOLTAGE,"Cambiar voltaje"
@@ -1103,4 +1103,4 @@ CHOOSE_CHANNELS,"Elegir canales"
 BALANCE_CURVE,"Equilibrar curva"
 CONFIRM_TO_SHARE_RECEIVER,"¿Está seguro de querer compartir este receptor?"
 CONFIRM_TO_UNBIND_RECEIVER,"¿Está seguro de querer desvincular este receptor?"
-CONFIRM_FRSK_NOT_COMPATIBLE,"This FRSK file is not compatible with your device.\nAre you sure you want to continue?"
+CONFIRM_FRSK_NOT_COMPATIBLE,"Este archivo FRSK no es compatible con su dispositivo.\n¿Está seguro de continuar?"
