Update sk.json  70% ethos suite

--- a/translations/suite/sk.json
+++ b/translations/suite/sk.json
@@ -233,62 +233,62 @@
     "DownloadingBootloader": "Sťahovanie bootloadera...",
     "CopyingBootloaderToRadio": "Kopírovanie bootloadera do rádia...",
     "FlashingBootloader": "Zápis bootloader...",
-    "BootloaderFlashError": "Flash bootloader error!",
-    "VersionNotSupportedToStartFirmware": "The bootloader version doesn't support switching to firmware!",
-    "VersionNotSupportedToStartBootloader": "The firmware version doesn't support switching to bootloader!",
-    "OperationCancelled": "Operation is cancelled!",
+    "BootloaderFlashError": "Chyba zápisu bootloadera!",
+    "VersionNotSupportedToStartFirmware": "Táto verzia bootloadera nepodporuje prepnutie do firmwéru!",
+    "VersionNotSupportedToStartBootloader": "Táto verzia firmwéru nepodporuje prepnutie do bootloadera!",
+    "OperationCancelled": "Opreácia je zrušená!",
     "ComponentNotFound": "The corresponding component could not be found!",
-    "DownloadFailed": "Download failed!",
-    "StartUpdating": "Start updating...",
-    "FlashLocalFirmware": "Flash radio from local file",
-    "WriteI18nFiles": "Write i18n files",
-    "DownloadingI18nFiles": "Downloading i18n files",
-    "CopyingI18nFiles": "Copying i18n files",
-    "Stable": "Stable",
-    "PreRelease": "Pre-Release",
+    "DownloadFailed": "Sťahovanie zlyhalo!",
+    "StartUpdating": "Štart aktualizácie...",
+    "FlashLocalFirmware": "Aktualizácia rádia z lokálneho súboru",
+    "WriteI18nFiles": "Zápis i18n súborov",
+    "DownloadingI18nFiles": "Sťahovanie i18n súborov",
+    "CopyingI18nFiles": "Kopírovanie i18n súborov",
+    "Stable": "Stabilná",
+    "PreRelease": "Neoficálna",
     "Nightly": "Nightly",
     "Branch": "Branch",
-    "NoCompatibleReleases": "No compatible releases",
-    "LastUpdatedAt": "Last updated at",
+    "NoCompatibleReleases": "Nekopatibilné vydanie",
+    "LastUpdatedAt": "Posledná aktualizácia o",
     "AudioPathChanged": "The following system audio folder(s) are no longer used by the firmware due to a system version upgrade. It is recommended to remove the folder. Is it okay to do so?",
-    "TestingVersion": "Testing version",
-    "GoToModuleManager": "Go to module manager",
-    "GoToDownloadCenter": "Go to download center",
-    "LatestBootloaderRequired": "Latest bootloader required!",
+    "TestingVersion": "Testovacia verzia",
+    "GoToModuleManager": "Choď do modul manažéra",
+    "GoToDownloadCenter": "Choď na centrum sťahovania",
+    "LatestBootloaderRequired": "Je potrebná posledná verzia bootloadera!",
     "ConfirmUpdateBootloaderFirstly": "The firmware of the selected release requires the updated bootloader. Or your radio won't work currectly. Do you confirm to update your bootloader firstly?",
     "ConfirmBackup": "Confirm backup",
     "BackupOrContinueUpdate": "It's recommended that you backup the contents of your radio before updating. Would you like to go to the backup page or continue updating?",
-    "GoToBackup": "Go to backup page",
-    "ContinueUpdaing": "Continue updating"
+    "GoToBackup": "Choď na kartu zálohovania",
+    "ContinueUpdaing": "Pokračovanie aktualizácie"
   },
   "RFModule": {
-    "RFModule": "RF Module",
-    "GoToEthosManage": "Go to Ethos manager",
-    "ModuleFirmwareList": "Module firmware list",
-    "FirmwareDetail": "Firmware detail",
-    "FlashModule": "Flash module"
+    "RFModule": "RF Modul",
+    "GoToEthosManage": "Choď  do Ethos manažéra",
+    "ModuleFirmwareList": "Zozanm firmwéru pre RF moduly",
+    "FirmwareDetail": "Informácie o firmwéri",
+    "FlashModule": "Zápis modulu"
   },
   "ModelTool": {
     "ModelManager": "Model manager",
-    "BackupYourRadio": "Backup your radio",
-    "BackupLocation": "Backup location",
+    "BackupYourRadio": "Zálohuj rádio",
+    "BackupLocation": "Lokácia zálohy",
     "LastBackupTime": "Last backup time",
-    "NotBackupYet": "Radio isn't backed up",
-    "Backup": "Backup",
-    "Restore": "Restore",
-    "ModelsList": "Models list",
-    "Unnamed": "Unnamed",
-    "Type": "Type",
-    "Airplane": "Airplane",
-    "Glider": "Glider",
-    "Helicopter": "Helicopter",
-    "Multicopter": "Multicopter",
-    "Other": "Other",
-    "FileName": "File Name",
-    "LastModifyTime": "Last Mod. Time",
-    "SelectRestoreComponent": "Select the file and components you want to restore",
-    "NoBackupFileFound": "No backup file found",
-    "RestoreWillStart": "Restore will start",
+    "NotBackupYet": "Radio nie je zálohované",
+    "Backup": "Záloha",
+    "Restore": "Obnovenie",
+    "ModelsList": "Zoznam modelov",
+    "Unnamed": "Bez mena",
+    "Type": "Typ",
+    "Airplane": "Lietadlo",
+    "Glider": "Vetroň",
+    "Helicopter": "Helikoptéra",
+    "Multicopter": "Multikoptéra",
+    "Other": "Iné",
+    "FileName": "Názov súboru",
+    "LastModifyTime": "Čas poslednej zmeny",
+    "SelectRestoreComponent": "Vyber súbor a komponenty ktoré chceš obnoviť",
+    "NoBackupFileFound": "Súbor so zálohou nenájdený",
+    "RestoreWillStart": "Obnovenie bude spustené",
     "RestoreFile": "Will restore the selected components in {{ file }} to your radio. This will overwrite the files with the same name in your radio.",
     "BackupRestoreCompleted": "Backup restore completed",
     "BackupCompleted": "Backup completed",
