Update sk.json small issues update

--- a/translations/suite/sk.json
+++ b/translations/suite/sk.json
@@ -20,7 +20,7 @@
   },
   "Welcome": {
     "WelcomeToEthosSuite": "Vitajte v Ethos Suite",
-    "P1": "Pred spustením aktualizácie firmwéru zálohujte súbory model.bin a radio.bin. Ethos Suite výkoná konverziu soru modelu zo staršej na novšiu, ale nie naopak. Zálohované súbory sú potrebné na návrat k predchádzajúcim verziám verzím.",
+    "P1": "Pred spustením aktualizácie firmwéru zálohujte súbory model.bin a radio.bin. Ethos Suite vykoná konverziu modelu zo staršej na novšiu, ale nie naopak. Zálohované súbory sú potrebné na návrat k predchádzajúcim verziám verzím.",
     "P2": "Po aktualizácii skontrolujte nastavenie modelu pred letom, aby ste se uistili, že všetko funguje správne.",
     "LatestRelease": "Aktuálne vydanie"
   },
@@ -69,7 +69,7 @@
     "SuitableFor": "Vhodné pre",
     "NotFRSKFile": "Toto nie je súbor .frsk a nemôžeme skontrolovť jeho obsah. Upozorňujeme, že to môže zpôsobiť poškodenie vášho zariadenia!",
     "InvalidFRSKFile": "Neplatný .frsk súbor!",
-    "ConnectionNotDetected": "Spojenie s rádiom nedetekované!",
+    "ConnectionNotDetected": "Rádio nepripojené!",
     "ConnectYourRadio": "Prosím zapnite rádio v bootloader móde alebo v Ethos systéme podľa návodu nižšie. Potom spojte rádio s PC pomocou USB kábla.",
     "Operation": "Operácia",
     "Flash": "Zápis",
@@ -77,7 +77,7 @@
     "MissingDiskError": "Chýba disk!",
     "WaitingDisk": "Čakanie na disk...",
     "AbortedWithUnknownStatus": "Operácia zastavená s neznámym stavom",
-    "ReceiveFailStatus": "Operácia zlyhala. Radio has returned an error!",
+    "ReceiveFailStatus": "Operácia zlyhala. Rádio vrátilo chybu!",
     "RadioNoResponse": "Operácia prerušená. Rádio neodpovedá.",
     "DisplayLanguage": "Jazyk pre zobrazenie",
     "Options": "Voľby",
@@ -138,14 +138,14 @@
     "FRSKFlashSuccessfully": ".frsk súbor bol nahratý!",
     "FRSKFlashFailed": "Chyba zápis súbor .frsk!",
     "FRSKNotMatchComponent": "Tento .frsk nie je vhodný pre daný hardvér. Operácia bude prerušená!",
-    "FlashFRSKWithoutHardwareInfo": "Nemôžem získať informácie z rádia. So we can't determine whether this .frsk file is applicable to your hardware or not. Do you want to continue flashing?",
+    "FlashFRSKWithoutHardwareInfo": "Nemôžem získať informácie z rádia. Nie je možné identifikovať tento súbor .frsk použiteľný pre váš hardvér alebo nie. Chcete pokračovať v zápise??",
     "DownloadMoreFirmware": "Stiahnutie viacero firmvérov",
     "SensorFirmware": "Firmvér pre senzory",
     "ReceiverFirmware": "Firmvér pre prijímače",
     "LuaScripts": "Lua skripty",
     "DownloadFirmware": "Stiahnutie firmvéru",
     "DownloadScripts": "Stiahnutie skriptov",
-    "DownloadAssetSuccessfully": "Asset has been downloaded successfully!",
+    "DownloadAssetSuccessfully": "Dielo bolo úspešne stiahnuté!",
     "NoFRSKFileFound": "Žiadny .frsk súbor nebol nájdený v zip balíku",
     "MultipleFRSKDetected": "Viac nájdených .frsk súborov. Prosím vyberte .frsk súbor pre zápis",
     "ProductList": "Zoznam produktov",
@@ -264,15 +264,15 @@
   "RFModule": {
     "RFModule": "RF Modul",
     "GoToEthosManage": "Choď  do Ethos manažéra",
-    "ModuleFirmwareList": "Zozanm firmwéru pre RF moduly",
-    "FirmwareDetail": "Informácie o firmwéri",
+    "ModuleFirmwareList": "Zozanm firmvéru pre RF moduly",
+    "FirmwareDetail": "Informácie o firmvéri",
     "FlashModule": "Zápis modulu"
   },
   "ModelTool": {
     "ModelManager": "Správca modelov",
     "BackupYourRadio": "Zálohuj rádio",
     "BackupLocation": "Lokácia zálohy",
-    "LastBackupTime": "Last backup time",
+    "LastBackupTime": "Posledný čas vytvorenia zálohy",
     "NotBackupYet": "Radio nie je zálohované",
     "Backup": "Záloha",
     "Restore": "Obnovenie",
@@ -309,7 +309,7 @@
     "WritingBackupFile": "Zapisuje sa záložný súbor..."
   },
   "About": {
-    "About": "O",
+    "About": "O aplikácii",
     "Description": "Popis",
     "Copyright": "Copyright",
     "License": "Licencia",
