--- a/translations/suite/sk.json
+++ b/translations/suite/sk.json
@@ -47,7 +47,7 @@
         "Success": "Hotovo",
         "Audio": "Audio",
         "SystemBitmaps": "Systémové bitmapy",
-        "UserBitmaps": "Užívateľské Bitmaps",
+        "UserBitmaps": "Užívateľské bitmapy",
         "Scripts": "Skripty",
         "Models": "Modely",
         "Logs": "Logy",
@@ -105,10 +105,10 @@
         "Dismiss": "Zamietnuté"
     },
     "ChooseVideoVersion": {
-        "ChooseYourVideoComponentVersion": "Choose your video component version",
+        "ChooseYourVideoComponentVersion": "Zvoľte verziu vašej zobrazovacej jednotky",
         "DialogText": "Suite has detected that you are using a HD radio. But the video component version is missing. Please confirm your video component version carefully by following the bitmaps bellow.",
-        "Version1": "Version 1",
-        "Version2": "Version 2"
+        "Version1": "Verzia 1",
+        "Version2": "Verzia 2"
     },
     "DFUFlasher": {
         "DFUFlasher": "DFU zapisovač",
@@ -210,8 +210,8 @@
         "ManageModel": "Správa modelu"
     },
     "VersionMap": {
-        "RecommendUpdate": "We strongly recommend you update to {{ recommend }} for a better experience",
-        "MissingRequiredComponentVersion": "Missing required component version",
+        "RecommendUpdate": "Doporučujeme aktualizáciu na {{ recommend }} pre lepšie využitie",
+        "MissingRequiredComponentVersion": "Chýba požadovaná verzia komponentu",
         "TargetFirmwareNotCompatible": "The {{ targetComponent }} firmware version {{ targetVersion }} needs to be used with the {{ requireComponent }} firmware version {{ requireVersion }}.",
         "RequireUpdate": "Please update the {{ requireComponent }} firmware to version {{ requireVersion }} firstly."
     },
@@ -348,7 +348,7 @@
         "OpenLogs": "Otvorte priečinok záznamov",
         "ClearCache": "Vymazať cache",
         "ClearCacheConfirm": "Ste si istý, že chcete vymazať cache?",
-        "CacheCleared": "Cache vymazaná!",
+        "CacheCleared": "Pamäť Cache vymazaná!",
         "Open": "Otvoriť",
         "Clear": "Vymazať",
         "LangFileNotFound": "Jazykový súbor sa nenašiel",
@@ -421,52 +421,52 @@
         "FailToDownload": "Nasledujúce súbory i18n sa nepodarilo stiahnuť:"
     },
     "LuaDevTool": {
-        "LuaDevTool": "Lua development tools",
-        "DebugLog": "Debug log",
-        "StartDebug": "Start debug",
-        "StartingDebug": "Starting debug mode ...",
-        "OpenSerialPortFailed": "Failed to open serial port. Please check your driver!",
-        "StopDebug": "Stop debug",
-        "StoppingDebug": "Stopping debug mode ...",
-        "TimeStamp": "Time stamp",
-        "ScrollToBottom": "Scroll to bottom",
-        "ClearOutput": "Clear output",
-        "VersionNotSupported": "Version not supported",
-        "VersionNotSupportedText": "The current firmware version of your radio doesn't support the feature. Please update to 1.5.0 or higher.",
-        "NoFrskySerialPortDetected": "No available Frsky radio serial port detected!",
-        "MultipleFrskyPortDetected": "Multiple available Frsky radio serial port detected. Please select the serial port you want to open for debugging.",
-        "LuaInstall": "Install Lua scripts",
-        "LuaInstallDescription": "Help you install lua scripts from a .zip file to your radio",
-        "OpenZip": "Open .zip",
-        "AnalysingFiles": "Analysing files ...",
-        "NoFileSelected": "No file selected!",
-        "ScriptsInstalled": "Scripts installed",
-        "ScriptsFound": "Found the following scripts",
-        "SelectScriptsDescription": "Please select the script you want to install (the folder name where the script is located will be the script's name)",
-        "InstallingScripts": "Installing scripts ...",
-        "ScriptsDirectoryNotFound": "Scripts folder not found!",
-        "FollowingScriptsFailToInstall": "The following scripts failed to install",
-        "NoScriptsFound": "No scripts found in the .zip file!"
+        "LuaDevTool": "Lua vývojárske nástroje",
+        "DebugLog": "Záznamy ladenia",
+        "StartDebug": "Štart ladenia",
+        "StartingDebug": "Štart módu ladenia ...",
+        "OpenSerialPortFailed": "Nepodarilo sa otvoriť sériový port. Prosím skontrolujte ovládač portu!",
+        "StopDebug": "Stop ladenia",
+        "StoppingDebug": "Ukončenie módu ladenia ...",
+        "TimeStamp": "Časová stopa",
+        "ScrollToBottom": "Skroluj nižšie",
+        "ClearOutput": "Vymazať výstup",
+        "VersionNotSupported": "Verzia nie je podporovaná",
+        "VersionNotSupportedText": "Aktuálna verzia firmvéru rádia nie je podporovaná. Prosím aktualizujte na 1.5.0 alebo vyššiu.",
+        "NoFrskySerialPortDetected": "Sériový port FRSKY rádia nebol nájdený!",
+        "MultipleFrskyPortDetected": "Viacero portov pre Frsky rádio bolo nájdených. Prosím vyberte port, ktorý chcete otvoriť pre ladenie.",
+        "LuaInstall": "Inštalácia Lua skriptov",
+        "LuaInstallDescription": "Pomoc pri inštalácii skriptov z .zip súboru do rádia",
+        "OpenZip": "Otvoriť .zip",
+        "AnalysingFiles": "Analyzovanie súborov ...",
+        "NoFileSelected": "Súbor nebol vybratý!",
+        "ScriptsInstalled": "Skripty naištalované",
+        "ScriptsFound": "Nájdené nasledujúce skripty",
+        "SelectScriptsDescription": "Prosím vyberte skript, ktorý chcete inštalovať (názov adresára ked je skript uložený bude aj názvom skriptu)",
+        "InstallingScripts": "Inštalovanie skriptov ...",
+        "ScriptsDirectoryNotFound": "Adresár so skriptami nenájdený!",
+        "FollowingScriptsFailToInstall": "Inštalácia nasledujúcich skriptov sa nepodarila",
+        "NoScriptsFound": "Žiadne skripty v .zip súbore!"
     },
     "LuaLib": {
-        "LuaLib": "Lua library",
-        "DownloadingScript": "Downloading scripts ...",
-        "ScriptNotFound": "Script not found!",
-        "DownloadScriptSuccessfully": "Download scirpt successfully!",
-        "SavingScript": "Saving scripts ...",
-        "StartingInstallScripts": "Starting installing scripts ...",
-        "StartingDownloadScripts": "Starting downloading scripts ...",
-        "AnalysingFile": "Analysing the file ...",
-        "FailToInstallScripts": "Failed to install scripts!",
-        "WritingScriptsInfo": "Writing scripts information ...",
-        "LoadingScriptsFromRadio": "Loading scripts from radio ...",
-        "RemoteLibrary": "Remote library",
-        "RadioScripts": "Radio scripts",
-        "Install": "Install",
-        "InstalledScript": "Installed script",
-        "InstallLatest": "Install latest",
-        "Reinstall": "Reinstall",
-        "ScriptInfo": "Script information"
+        "LuaLib": "Lua knižnica",
+        "DownloadingScript": "Sťahovanie skriptov ...",
+        "ScriptNotFound": "Skript nenájdený!",
+        "DownloadScriptSuccessfully": "Sťahovanie skriptu dokončené!",
+        "SavingScript": "Ukladanie skriptov ...",
+        "StartingInstallScripts": "Spúšťanie inštalácie skriptov ...",
+        "StartingDownloadScripts": "Spúšťanie sťahovania skriptov ...",
+        "AnalysingFile": "Analyzovanie súboru ...",
+        "FailToInstallScripts": "Inštalácia skriptov zlyhala!",
+        "WritingScriptsInfo": "Zapisovanie informácií o skriptoch ...",
+        "LoadingScriptsFromRadio": "Načítanie skriptov z rádia ...",
+        "RemoteLibrary": "Vzdialená knižnica",
+        "RadioScripts": "Rádio skripty",
+        "Install": "Inštalácia",
+        "InstalledScript": "Inštalované skripty",
+        "InstallLatest": "Aktuálna inštalácia",
+        "Reinstall": "Reinštalácia",
+        "ScriptInfo": "Informácie o skriptoch"
     },
     "Updater": {
         "NewVersionAvailable": "Nová verzia Suite {{ version }} je k dispozícii!",
