--- a/translations/suite/sk.json
+++ b/translations/suite/sk.json
@@ -7,7 +7,7 @@
         "Others": "Iné",
         "NewVersionAvailable": "Nová verzia Ethos Suite je k dispozícii. Chcete stiahnuť inštalátor?",
         "DownloadingLatestInstaller": "Sťahovanie aktuálneho inštalátora",
-        "InstallerHasBeenDownloaded": "Sťahovanie inštalátora dokončené. Chcete spustiť inštalaciu teraz?",
+        "InstallerHasBeenDownloaded": "Sťahovanie inštalátora dokončené. Chcete spustiť inštaláciu teraz?",
         "VerifyingInstallation": "Verifikácia inštalácie ...",
         "NoUpdateAvailable": "Žiadna aktualizácia k dispozícii. Používate aktuálnu verziu."
     },
